Fix the step number border in dark mode

--- a/src/app/components/recipe/recipe.component.scss
+++ b/src/app/components/recipe/recipe.component.scss
@@ -263,7 +263,7 @@ $red-500: #f44336;
 
       .step-number {
         font-weight: bold;
-        border: 1px solid black;
+        border: 1px solid var(--mat-sys-on-background);
         border-radius: 50%;
         flex: 0 0 30px; // fix the width of the flex item to 30px
         height: 30px;
